--- a/journey.html
+++ b/journey.html
@@ -3,12 +3,63 @@
 <head>
 	<meta charset="utf-8">
 	<title>Eve Journey Planner</title>
+	<style>
+	body { background-color: #222; }
+	
+	:root[theme='dark'] {
+		--background-color: #121212;
+		--surface-color: #242424;
+
+		--font-color-main: rgba(255, 255, 255, 0.87);
+		--font-color-medium: rgba(255, 255, 255, 0.60);
+		--font-color-disabled: rgba(255, 255, 255, 0.38);
+
+		--font-on-primary-color-main: rgba(0, 0, 0, 0.87);
+		--font-on-primary-color-dark-main: rgba(255, 255, 255, 0.87);
+		--font-on-primary-color-dark-medium: rgba(255, 255, 255, 0.60);
+		--font-on-primary-color-medium: rgba(0, 0, 0, 0.56);
+		--font-on-primary-color-disabled: rgba(0, 0, 0, 0.38);
+
+		--hover-color: rgba(255, 255, 255, 0.04);
+		--focus-color: rgba(255, 255, 255, 0.12);
+		--focus-color-solid: #424242;
+
+		--background-color-disabled: rgba(255, 255, 255, 0.12);
+		--background-color-level-4dp: rgba(255, 255, 255, 0.09);
+		--background-color-level-16dp-solid: #262626;
+		--background-color-card: var(--surface-color);
+		--background-color-slight-emphasis: rgba(255, 255, 255, 0.05);
+
+		--separator-color: #424242; /* borders between components */
+
+		--error-color: #CF6679;
+
+		--slider-track-color: rgba(255, 255, 255, 0.26);
+		--switch-thumb-off-color: #bababa;
+
+		--primary-color: #B39DDB;
+		--primary-color-dark: #9575CD;
+		--primary-color-numeric: 179, 157, 219;
+		--primary-color-raised-hover-solid: #C2ACEA;
+		--primary-color-raised-focus-solid: #DBC5FF;
+
+		--secondary-color: #CDDC39;
+		--secondary-color-hover-solid: #DCEB48;
+		--secondary-color-focus-solid: #F5FF61;
+		--secondary-container-color: #B39DDB;
+		--font-on-secondary-container-color: rgba(255, 255, 255, 0.87);
+
+		--md_sys_color_on-surface: 230, 225, 229;
+	}
+	</style>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@materializecss/materialize@2.0.0-alpha/dist/css/materialize.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@materializecss/materialize@2.0.0-alpha/dist/js/materialize.min.js"></script>
 	<script src="js/wasm_exec.js"></script>
 	<script>
+	document.documentElement.setAttribute('theme', 'dark');
+	
 	const go = new Go();
 	WebAssembly.instantiateStreaming(fetch("wasm/journey.wasm"), go.importObject).then((result) => {
 		go.run(result.instance);
@@ -25,12 +76,19 @@
 			systems = JSON.parse(await go_systems());
 		} catch (error) {
 			alert(error);
-			window.location.href = '/index.php';
 			return;
 		}
 		
 		M.Autocomplete.init(document.querySelectorAll('.systems'), {
-			minLength: 0,
+			minLength: 1,
+			onSearch: function(text, autocomplete) {
+				setTimeout(() => {
+					const filteredData = systems.filter(system => {
+						return system['text'] != 'No System Name' && system['text'].toLowerCase().indexOf(text.toLowerCase()) >= 0;
+					}).splice(0, 5);
+					autocomplete.setMenuItems(filteredData);
+				}, 500);
+			},
 			data: systems
 		});
 		
@@ -88,21 +146,21 @@
 			
 			$('#result').empty();
 			navigation.forEach(function(entry) {
-				var securityclass = "red lighten-2";
+				var securityclass = "red darken-4";
 				if (entry.node.security >= 0.45) {
-					securityclass = "green lighten-2";
+					securityclass = "green darken-4";
 				} else if (entry.node.security < 0.45 && entry.node.security > 0) {
-					securityclass = "amber lighten-1";
+					securityclass = "amber darken-4";
 				}
 				var lifeclass = "";
 				if (entry.edge.lifestatus == "critical") {
-					lifeclass = "red lighten-2"
+					lifeclass = "red darken-4"
 				}
 				var massclass = "";
 				if (entry.edge.massstatus == "critical") {
-					massclass = "red lighten-2"
+					massclass = "red darken-4"
 				} else if (entry.edge.massstatus == "destab") {
-					massclass = "amber lighten-1"
+					massclass = "amber darken-4"
 				}
 				if (entry.node.name == "Thera") {
 					entry.node.class = "";
@@ -140,12 +198,14 @@
 			routestring += " > " + lastsystem;
 			$('#pastable').val(routestring);
 			
+			$('#jumps').html(systemlist.length);
+			
 			const url = 'https://corsproxy.io/?' + encodeURIComponent('https://eve-gatecheck.space/eve/get_kills.php?systems=' + systemlist.join(','));
 			$.getJSON(url, function(data) {
 				systemlist.forEach(function(systemid) {
 					if (typeof(data[systemid]) !== "undefined") {
 						$('#kills-'+systemid).html(data[systemid].kills.killCount + " (" + data[systemid].kills.gateKillCount + " on gate)");
-						$('#kills-'+systemid).addClass('red').addClass('lighten-2');
+						$('#kills-'+systemid).addClass('red').addClass('darken-4');
 					}
 				});
 			});
@@ -190,9 +250,11 @@
 		<a class="waves-effect waves-light btn" id="calculate"><i class="material-icons left">route</i>Calculate Path</a>
 		<a class="waves-effect waves-light btn" id="refresh"><i class="material-icons left">sync</i>Refresh Data</a>
 	</div>
-	<div style="height: 20px;"></div>
+	<div style="height: 15px;"></div>
+	<div class="input-field col s12"><b>Jumps:</b> <span id="jumps"></span></div>
+	<div style="height: 15px;"></div>
 	<div class="input-field col s12"><input type="text" id="pastable"><label>Pastable Route: </label></div>
-	<div style="height: 20px;"></div>
+	<div style="height: 15px;"></div>
 	<div>
 		<table>
 			<thead>
